# MI-mMLIPs

./: .gitignore  README.md  install_deps.sh  pyproject.toml  requirements-cu124.txt  requirements.txt  train.json
docs/: parameters.md  sector_heads_and_hierarchical_regularization.md
example/: best.pt  best_latest.pt  config.json  energy_test.out  energy_train.out  force_test.out  force_train.out  heff_test.out  heff_train.out  loss.out  plot-mini-magp.py  predictions.xyz  spin-minip.pt
example/spin-dynamics/: CrI3fm.xyz  Cri3-Times20.data  Cri3-Times20.xyz  convert-bothDATAandXYZ.py  in.compute  in.spin_dynamics  log.lammps  spin_dynamics_cooled.data
scripts/: deepspin_to_extxyz.py  plot_training_rmse.py  sample_xyz.py  scan_em_curve.py  score_magnetic_candidates.py  train_extxyz.py
spin_mlips/: __init__.py  ase_io.py  data.py  descriptors.py  model.py  neighbor.py
spin_mlips/legacy/: __init__.py  deepspin_dataset.py
src/mini_magp/: __init__.py  calculator.py  cli.py  data.py  descriptors.py  export.py  model.py  radial.py  train.py  utils.py
src/mini_magp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_magpot.py
tools/: check_mag_energy.py  check_sector_sensitivity.py  diagnose_spin_sector_energies.py  estimate_direction_energy_contribution.py  plot-single-nep.py  plot_spin_config.py  spin_scan.py
